--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ textarea {
       rgba(245, 245, 245, 0.8),
       rgba(245, 245, 245, 0.8)
     ),
-    url(/daac8858fd4a0ccea44f59dfd079c3c16c263f33/c157c/assets/svg/common-bg.svg);
+    url(https://drive.google.com/file/d/1khFfWqN64EbjyzpoHJkUMsyYCNdYu-yh/view?usp=share_link);
   background-position: center;
   height: 100vh;
   min-height: 80rem;
@@ -403,7 +403,7 @@ textarea {
       rgba(245, 245, 245, 0.8),
       rgba(245, 245, 245, 0.8)
     ),
-    url(/daac8858fd4a0ccea44f59dfd079c3c16c263f33/c157c/assets/svg/common-bg.svg);
+    url(https://drive.google.com/file/d/1khFfWqN64EbjyzpoHJkUMsyYCNdYu-yh/view?usp=share_link);
   background-size: cover;
   background-position: center;
 }
@@ -510,7 +510,7 @@ textarea {
       rgba(245, 245, 245, 0.8),
       rgba(245, 245, 245, 0.8)
     ),
-    url(/daac8858fd4a0ccea44f59dfd079c3c16c263f33/c157c/assets/svg/common-bg.svg);
+    url(https://drive.google.com/file/d/1khFfWqN64EbjyzpoHJkUMsyYCNdYu-yh/view?usp=share_link);
   background-size: cover;
   background-position: center;
   position: relative;
